# magnum-engine

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/api/: application.h
src/application-layer/: application.cpp
